--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav class="Nav-bar">
 
+    </nav>
 
+    <section class="SectionBook">
+
+    </section>
+
+    <section class="SectionClient">
+
+    </section>
+
+    <section class="SectionReserve">
+
+    </section>
 
 
 
