--- a/index.html
+++ b/index.html
@@ -8,10 +8,39 @@
 </head>
 <body>
     <nav class="Nav-bar">
-
+        <h2>Alquiler de libros</h2>
+        <div class="div-btn">
+            <button type="button">Libros</button>
+            <button type="button">Clientes</button>
+            <button type="button">Alquilar Libros</button>
+        </div>
     </nav>
 
     <section class="SectionBook">
+        <div class="Form-Books">
+            <h3>Registrar Libro</h3>
+            <div class="div-form">
+               <div class="div-input">
+                    <input type="text" placeholder="Nombre del Autor">
+               </div>
+               <div class="div-input">
+                    <input type="text" placeholder="Apellido del Autor">
+                </div>
+                <div class="div-input">
+                    <input type="text" placeholder="Nombre del Libro">
+                </div>
+                <div class="div-input">
+                    <input type="text" placeholder="Editorial">
+                </div>
+                <div class="div-input">
+                    <input type="date">
+                </div>
+            </div>
+            <button class="btn-register-book">Registrar</button>
+        </div>
+        <div class="div-Books">
+            
+        </div>
 
     </section>
 
