--- a/index.html
+++ b/index.html
@@ -39,7 +39,17 @@
             <button class="btn-register-book">Registrar</button>
         </div>
         <div class="div-Books">
-            
+            <div class="Book">
+                <h2 id="CodeId">#468</h2>
+                <h3 id="NameBook">Un libro</h3>
+                <span id="NameAutor">Un autor</span>
+                <span id="Editorial">Una editorial</span>
+                <span id="DateBook">3254/55/2</span>
+                <div class="div-btn-book">
+                    <button>Editar</button>
+                    <button>Eliminar</button>
+                </div>
+            </div>
         </div>
 
     </section>
