--- a/index.html
+++ b/index.html
@@ -39,17 +39,7 @@
             <button class="btn-register-book">Registrar</button>
         </div>
         <div class="div-Books">
-            <div class="Book">
-                <h2 id="CodeId">#468</h2>
-                <h3 id="NameBook">Un libro</h3>
-                <span id="NameAutor">Un autor</span>
-                <span id="Editorial">Una editorial</span>
-                <span id="DateBook">3254/55/2</span>
-                <div class="div-btn-book">
-                    <button>Editar</button>
-                    <button>Eliminar</button>
-                </div>
-            </div>
+            
         </div>
 
     </section>
@@ -62,6 +52,22 @@
 
     </section>
 
+
+
+    <template id="template1">
+        <div class="Book">
+            <h2 id="CodeId"></h2>
+            <h3 id="NameBook"></h3>
+            <span id="NameAutor"></span>
+            <span id="Editorial"></span>
+            <span id="DateBook"></span>
+            <span id="Active"></span>
+            <div class="div-btn-book">
+                <button>Editar</button>
+                <button>Eliminar</button>
+            </div>
+        </div>
+    </template>
 
     <script type="module" src="app.js"></script>
 </body>
