--- a/index.html
+++ b/index.html
@@ -124,21 +124,21 @@
             </div>
             <div class="Update">
                 <div class="div-input">
-                    <input type="text" placeholder="Nombre del Cliente" id="NameClient">
+                    <input type="text" placeholder="Nombre del Cliente" id="NameClientUpdate">
                </div>
                <div class="div-input">
-                    <input type="text" placeholder="Apellido del Cliente" id="LastNameClient">
+                    <input type="text" placeholder="Apellido del Cliente" id="LastNameClientUpdate">
                 </div>
                 <div class="div-input">
-                    <input type="text" placeholder="Cedula del Cliente" id="CiClient">
+                    <input type="text" placeholder="Cedula del Cliente" id="CiClientUpdate">
                 </div>
                 <div class="div-input">
-                    <input type="text" placeholder="Direccion" id="AddressClient">
+                    <input type="text" placeholder="Direccion" id="AddressClientUpdate">
                 </div>
                 <div class="div-input">
-                    <input type="date" id="DateClient">
+                    <input type="date" id="DateClientUpdate">
                 </div>
-                    <button class="btn-Update-book ">Editar</button>
+                    <button class="btn-Update-Client">Editar</button>
             </div>
         </div>
 
@@ -151,7 +151,7 @@
                 <h1>¿Estas seguro que quieres Borrar este Cliente?</h1>
             <div class="div-btn-book">
                 <button class="btn-Cancela-Delete-book">Cancelar</button>
-                <button class="btn-Delete-book">Eliminar</button>
+                <button class="btn-Delete-Client">Eliminar</button>
             </div>
             </div>
         </div>
